# ai_automator

./: .gitignore  README.md  main.R  main.py  output_staff.json  pyproject.toml  requirements.txt  staff_container.txt
config/: const.py  settings.py
core/: auth.py  browser.py  logger.py  prompter.py  runner.py  secrets_manager.py  utils.py
crew/: image_verifier.py  shared_llm.py  staff_analyst.py
r_scripts/: extract_staff_container.R
scripts/: auth.py  automator-live.py  automator_live.py  connect_staff.py  const.py  extract_staff_html.py  login.py  media_library.py  reset_credentials.py  run_r_script.py  secrets_manager.py  shadow_helpers.py  staff_crew_ai.py  staff_data_extraction.py  staff_submission_automation.py  utils.py
scripts/selenium-profile/: Affiliation Database  BrowsingTopicsState  DIPS  DevToolsActivePort  Favicons  History  History-journal  InterestGroups-wal  Local State  Login Data  Network Action Predictor  Preferences  Shortcuts  Top Sites  Translate Ranker Model  Web Data  first_party_sets.db
scripts/selenium-profile/DawnGraphiteCache/: data_1  index
scripts/selenium-profile/DawnWebGPUCache/: data_1  index
scripts/selenium-profile/Default/: BrowsingTopicsState  DIPS  DIPS-wal  Favicons  History  History-journal  InterestGroups  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Shortcuts  Top Sites  Web Data  passkey_enclave_state
scripts/selenium-profile/Extension Rules/: LOG  LOG.old
staff/: connect.py  connect_staff.py  html_extractor.py  images.py  media_library.py  staff_ops.py
(+2238 files in other folders)
