[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_automator"
version = "0.1.0"
description = "AI staff automator"
readme = "README.md"
requires-python = ">=3.8"

# Python dependencies
dependencies = [
    "crewai==0.175.0",
    "ipython==8.12.3",
    "keyring==25.6.0",
    "protobuf==6.32.0",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "selenium==4.35.0",
    "traitlets==5.14.3",
    "wcwidth==0.2.13",
    "webdriver_manager==4.0.2"
]
